# pandoc_glossary_filter

./: README.md  pyproject.toml
pandoc_glossary_filter/: __init__.py  __main__.py  data.py  filter.py
